cabal-version:      3.0
name:               aoc2022
version:            0.1.0.0
synopsis:           Advent of code 2022
-- description:
homepage:           https://github.com/melted/aoc2022
license:            ISC
license-file:       LICENSE
author:             Niklas Larsson
maintainer:         niklas@mm.st
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Advent
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      containers
    hs-source-dirs:   lib
    default-language: GHC2021

executable day4
    import:           warnings
    main-is:          Day4.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        containers,
        aoc2022

    hs-source-dirs:   app
    default-language: GHC2021


executable day5
    import:           warnings
    main-is:          Day5.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        containers,
        aoc2022

    hs-source-dirs:   app
    default-language: GHC2021
