cabal-version:      3.0
name:               aoc2022
version:            0.1.0.0
synopsis:           Advent of code 2022
-- description:
homepage:           https://github.com/melted/aoc2022
license:            ISC
license-file:       LICENSE
author:             Niklas Larsson
maintainer:         niklas@mm.st
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common appconf
    build-depends:
        base ^>=4.17.0.0,
        containers,
        aoc2022,
        attoparsec,
        text

    hs-source-dirs:   app
    default-language: GHC2021

library
    exposed-modules:  Advent
    build-depends:    base ^>=4.17.0.0,
                      attoparsec,
                      containers
    hs-source-dirs:   lib
    default-language: GHC2021

executable day4
    import:           appconf
    main-is:          Day4.hs

executable day5
    import:           appconf
    main-is:          Day5.hs

executable day6
    import:           appconf
    main-is:          Day6.hs

executable day7
    import:           appconf
    main-is:          Day7.hs
    build-depends:    attoparsec

executable day8
    import:           appconf
    main-is:          Day8.hs

executable day9
    import:           appconf
    main-is:          Day9.hs

executable day10
    import:           appconf
    main-is:          Day10.hs

executable day11
    import:           appconf
    main-is:          Day11.hs

executable day12
    import:           appconf
    main-is:          Day12.hs

executable day13
    import:           appconf
    main-is:          Day13.hs

executable day14
    import:           appconf
    main-is:          Day14.hs

executable day15
    import:           appconf
    main-is:          Day15.hs

executable day16
    import:           appconf
    main-is:          Day16.hs

executable day17
    import:           appconf
    main-is:          Day17.hs

executable day18
    import:           appconf
    main-is:          Day18.hs

executable day19
    import:           appconf
    main-is:          Day19.hs

executable day20
    import:           appconf
    main-is:          Day20.hs

executable day21
    import:           appconf
    main-is:          Day21.hs

executable day22
    import:           appconf
    main-is:          Day22.hs